# c_compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh
0common/: CMakeLists.txt  common.h  log.cpp  log.h
1lexer/: CMakeLists.txt  lexer.cpp  lexer.h  main_lexer.cpp  token.cpp  token.h
2parser/: CMakeLists.txt  main_paser.cpp  parser.cpp  parser.h  symbol.cpp  symbol.h  symbol_table.cpp  symbol_table.h
3ir/: ir.cpp  ir.h
test/: test.c
